chore(playground): update vue-demo to use simplified config
- Migrate from verbose config to defineConfig() pattern
- Remove ja-JP locale (reduce to zh-CN and en-US only)
- Update locale files with latest translations
- Demonstrate the new minimal configuration approach

--- a/apps/playground/vue-demo/src/locales/en-US.json
+++ b/apps/playground/vue-demo/src/locales/en-US.json
@@ -1,6 +1,6 @@
 {
-  "10013440": "interact",
-  "10141355": "switching...",
+  "10013440": "demo",
+  "10141355": "",
   "11134119": "",
   "11150937": "",
   "11153813": "",
@@ -16,18 +16,18 @@
   "13731480": "",
   "15611141": "",
   "15636155": "",
-  "15929414": "joinned time",
-  "21511119": "curretn lang",
+  "15929414": "",
+  "21511119": "",
   "31021111": "",
   "33147149": "",
   "40014870": "",
-  "41215122": "message notify",
+  "41215122": "",
   "42612454": "",
   "43641315": "",
-  "49032491": "publish article",
-  "52134415": "highly user",
-  "61471412": "edit info",
-  "71101173": "database display",
+  "49032491": "",
+  "52134415": "",
+  "61471412": "",
+  "71101173": "",
   "71651251": "",
   "81510141": "",
   "85011111": "",
