refactor(react-demo): update to use original text with hash-based keys
- Update all demo components to use original Chinese text in t() calls
- Replace abstract keys with actual content (e.g., t('你好，世界') instead of t('hello'))
- Remove nested keys, pluralization, and complex features
- Add extract configuration to translink.config.ts
- Regenerate locale files with hash-based keys (8-digit numeric)
- Update README to reflect new hash-based architecture
- Simplify demos to focus on core runtime features

--- a/apps/playground/react-demo/src/locales/zh-CN.json
+++ b/apps/playground/react-demo/src/locales/zh-CN.json
@@ -1,109 +1,116 @@
 {
-  "appTitle": "TransLink I18n React Demo",
-  "currentLocale": "当前语言",
-  "initializing": "初始化中...",
-  "loading": "加载中...",
-  "demoScenes": "演示场景",
-  "quickActions": "快捷操作",
-  "toggleLanguage": "切换语言",
-  "openDevTools": "打开开发工具",
-  "footerInfo": "© 2024 TransLink I18n - 现代化国际化解决方案",
-  "footerLocale": "语言",
-  "footerScene": "场景",
-  "footerDevtools": "开发工具",
-  "footerEnabled": "已启用",
-
-  "sceneBasicTranslation": "基础翻译",
-  "sceneLanguageSwitcher": "语言切换",
-  "sceneParameterInterpolation": "参数插值",
-  "scenePluralization": "复数处理",
-  "sceneTranslationComponent": "Translation 组件",
-  "sceneHooks": "React Hooks",
-  "sceneLoadingStates": "加载状态",
-  "sceneErrorHandling": "错误处理",
-  "scenePerformance": "性能优化",
-
-  "basicTranslationTitle": "基础翻译",
-  "basicTranslationDesc": "验证 t() 函数的基础翻译功能，包括嵌套键访问、数组索引和默认值回退。",
-  "hello": "你好，世界！",
-  "nested": {
-    "level1": {
-      "level2": "这是一个嵌套的翻译键"
-    }
-  },
-  "items": ["第一项", "第二项", "第三项"],
-
-  "languageSwitcherTitle": "语言切换器",
-  "languageSwitcherDesc": "验证 setLocale() 方法、响应式 locale 状态、availableLocales 列表和 isLoading 状态。",
-  "selectLanguage": "选择语言",
-  "switchingLanguage": "切换中...",
-  "languageChinese": "中文",
-  "languageEnglish": "English",
-
-  "parameterInterpolationTitle": "参数插值",
-  "parameterInterpolationDesc": "验证 t(key, params) 的参数插值功能，支持多种参数类型和特殊字符转义。",
-  "greeting": "你好，{{name}}！",
-  "userInfo": "用户 {{username}} 今年 {{age}} 岁",
-  "numbers": "数量：{{count}}，价格：¥{{price}}",
-  "escapeHtml": "输入内容：{{html}}",
-
-  "pluralizationTitle": "复数处理",
-  "pluralizationDesc": "验证 t(key, { count }) 的自动复数功能，根据不同语言的复数规则自动选择合适的翻译。",
-  "items_one": "1 个项目",
-  "items_other": "{{count}} 个项目",
-  "itemsWithUser_other": "{{user}} 有 {{count}} 个项目",
-
-  "translationComponentTitle": "Translation 组件",
-  "translationComponentDesc": "验证 <Translation> 组件的各种属性和用法，包括 i18nKey、values、components 等。",
-  "translationComponentBasic": "这是通过 Translation 组件渲染的文本",
-  "translationComponentWithParams": "{{name}} 是一位 {{role}}",
-  "translationComponentItems": "{{count}} 个项目",
-  "translationComponentRichText": "这是<bold>重要</bold>的内容",
-
-  "hooksTitle": "React Hooks",
-  "hooksDesc": "验证 useTranslation() 和 useI18n() hooks 的使用，提供对 i18n 功能的便捷访问。",
-  "hooksUseTranslation": "通过 useTranslation hook 获取的翻译",
-  "hooksToggleLanguage": "切换语言",
-  "hooksCombinedUsage": "当前语言是 {{locale}}",
-
-  "loadingStatesTitle": "加载状态",
-  "loadingStatesDesc": "验证 isReady 和 isLoading 状态，用于条件渲染和禁用 UI。",
-  "loadingStatesReady": "I18n 已就绪",
-  "loadingStatesInitializing": "初始化中...",
-  "loadingStatesSwitching": "切换语言中...",
-  "loadingStatesIdle": "空闲",
-  "loadingStatesSimulate": "模拟加载",
-  "loadingStatesSimulating": "模拟中...",
-  "loadingStatesSimulatingMessage": "正在模拟语言切换...",
-
-  "errorHandlingTitle": "错误处理",
-  "errorHandlingDesc": "验证错误边界、回退处理和缺失键的处理机制。",
-  "errorHandlingTriggerMissing": "触发缺失键",
-  "errorHandlingClearLog": "清除日志",
-  "errorHandlingDevtoolsAvailable": "DevTools 可用",
-  "errorHandlingDevtoolsNotAvailable": "DevTools 不可用（仅开发环境）",
-
-  "performanceTitle": "性能优化",
-  "performanceDesc": "验证缓存、懒加载和批量更新等性能优化功能。",
-  "performanceCacheHits": "缓存命中",
-  "performanceCacheMisses": "缓存未命中",
-  "performanceHitRate": "命中率",
-  "performanceBatchTest": "批量翻译测试（100 个键）",
-  "performanceLazyLoadingEnabled": "懒加载已启用",
-
-  "currency": "元",
-  "greetingLateNight": "夜深了，注意休息！",
-  "greetingMorning": "早上好！",
-  "greetingAfternoon": "下午好！",
-  "greetingEvening": "晚上好！",
-  "validationEmailRequired": "邮箱不能为空",
-  "validationEmailInvalid": "邮箱格式不正确",
-  "validationEmailValid": "邮箱格式正确",
-  "validationPasswordRequired": "密码不能为空",
-  "validationPasswordTooShort": "密码长度至少为 8 位",
-  "validationPasswordValid": "密码格式正确",
-  "errorNetworkFailed": "网络请求失败",
-  "errorFetchingUser": "获取用户数据失败",
-  "errorOccurred": "发生错误",
-  "errorGenericMessage": "操作失败，请稍后重试"
+  "10014274": "加载翻译资源...",
+  "10102515": "TransLink React Demo",
+  "10112715": "已就绪",
+  "10141355": "切换中...",
+  "10210149": "✅ 已就绪",
+  "10234107": "greetingLateNight",
+  "10360331": "不存在的文本",
+  "10521114": "加载状态",
+  "10715510": "购物车有少量商品",
+  "11111031": "演示 t() 函数的基本用法和默认值功能",
+  "11152110": "条件渲染",
+  "11310472": "这个文本不存在于翻译文件中",
+  "11331069": "切换语言",
+  "11846115": "✅ 语言切换时缓存会更新",
+  "12101513": "✅ DevTools 已启用",
+  "12251511": "你好，{{name}}！",
+  "12313107": "购物车有很多商品",
+  "12473121": "翻译引擎已初始化，可以正常使用",
+  "12813119": "这个key不存在",
+  "12929500": "欢迎使用 TransLink 国际化解决方案",
+  "13041512": "加载中",
+  "13111510": "输入：{{input}}",
+  "13121015": "这是一个嵌套的组件",
+  "13130131": "这个也不存在",
+  "13141528": "打开浏览器控制台查看 DevTools 日志",
+  "13151180": "已启用",
+  "13164811": "英语",
+  "13412908": "错误处理",
+  "13710251": "所有组件共享同一个翻译引擎实例",
+  "13815511": "1 个项目",
+  "13817031": "即使翻译缺失，应用也不会崩溃",
+  "14141397": "validationEmailRequired",
+  "14151201": "errorFetchingUser",
+  "14415501": "另一个测试文本",
+  "14512814": "打开开发工具",
+  "14512841": "未就绪",
+  "14711441": "greetingEvening",
+  "15061012": "运行性能测试",
+  "15106513": "你好，世界！",
+  "15130122": "这是 React Hook 的响应式特性",
+  "15134811": "这是第一个子组件",
+  "15137952": "返回原始文本作为后备",
+  "15191313": "触发缺失 Key",
+  "15211150": "购物车是空的",
+  "15415001": "errorNetworkFailed",
+  "15441151": "TransLink 国际化解决方案 - React 演示",
+  "15581091": "演示 isReady 和 isLoading 状态管理",
+  "16131210": "演示 useI18n Hook 的所有返回值",
+  "17415812": "子组件 3（嵌套）",
+  "21215085": "快速操作",
+  "21231312": "组件渲染次数",
+  "21454113": "{{count}} 个项目",
+  "21511119": "当前语言",
+  "22141410": "⏳ 未就绪",
+  "24456272": "validationPasswordValid",
+  "24512276": "得益于缓存机制，性能非常快",
+  "27615110": "基础翻译",
+  "33140015": "子组件 2",
+  "34013346": "✅ 空闲",
+  "34129109": "没有进行中的加载操作",
+  "37315141": "开发工具",
+  "38391314": "子组件 1",
+  "41411111": "假",
+  "41443567": "greetingAfternoon",
+  "41514112": "validationEmailValid",
+  "41557887": "validationPasswordRequired",
+  "41912102": "✅ 翻译结果会被自动缓存",
+  "42106028": "价格：${{price}}",
+  "43523121": "未加载",
+  "46614511": "currency",
+  "47614911": "greetingMorning",
+  "48311151": "⏳ 加载中",
+  "50015531": "errorOccurred",
+  "53511514": "20 个翻译调用，渲染流畅",
+  "54680511": "演示场景",
+  "56137863": "validationPasswordTooShort",
+  "56151433": "演示语言切换功能和状态管理",
+  "57276801": "正在加载语言资源...",
+  "61247155": "组件化使用",
+  "61311611": "3000 次翻译调用",
+  "62291501": "演示缺失翻译的处理和 DevTools 功能",
+  "69141163": "购物车有一些商品",
+  "71218510": "性能测试",
+  "71353148": "演示根据不同条件渲染不同文本（应用层逻辑）",
+  "71520281": "平均每次",
+  "71572150": "场景",
+  "72131018": "没有项目",
+  "73131314": "演示在多个组件中使用 useI18n Hook",
+  "74836131": "翻译函数",
+  "76191461": "第三个测试文本",
+  "76391991": "validationEmailInvalid",
+  "76997131": "语言切换",
+  "77064131": "无内容",
+  "78162113": "点击按钮观察 isLoading 状态变化",
+  "79513141": "列表项",
+  "80111075": "演示如何在翻译文本中使用动态参数",
+  "80124141": "{{name}} 有 {{count}} 个项目",
+  "81451261": "演示翻译缓存和性能优化",
+  "82713018": "真",
+  "83129108": "有内容",
+  "84141454": "语言切换会自动更新所有组件",
+  "86121310": "✅ 相同的翻译只计算一次",
+  "86645151": "总计：¥{{amount}}",
+  "87917652": "errorGenericMessage",
+  "89123972": "Hooks 示例",
+  "91091511": "特殊字符已自动转义",
+  "91312082": "加载中...",
+  "91561514": "语言",
+  "92471411": "始终返回可用的文本（原文或默认值）",
+  "94410121": "正在初始化翻译引擎...",
+  "95521311": "当语言切换时，所有使用 t() 的文本会自动更新",
+  "96108120": "性能测试文本",
+  "99371436": "简体中文",
+  "09401111": "参数插值"
 }
