--- a/apps/playground/vue-demo/src/locales/zh-CN.json
+++ b/apps/playground/vue-demo/src/locales/zh-CN.json
@@ -1,102 +1,71 @@
 {
-  "appTitle": "TransLink I18n 演示",
-  "currentLocale": "当前语言",
-  "initializing": "初始化中...",
-  "loading": "加载中...",
-  "demoScenes": "演示场景",
-  "quickActions": "快捷操作",
-  "toggleLanguage": "切换语言",
-  "openDevTools": "打开 DevTools",
-  "footerInfo": "© 2024 TransLink I18n - 现代化的国际化解决方案",
-  "footerLocale": "语言",
-  "footerScene": "场景",
-  "footerDevtools": "开发工具",
-  "footerEnabled": "已启用",
-
-  "sceneBasicTranslation": "基础翻译",
-  "sceneLanguageSwitcher": "语言切换",
-  "sceneParameterInterpolation": "参数插值",
-  "scenePluralization": "复数支持",
-  "sceneDirective": "v-t 指令",
-  "sceneTranslationComponent": "Translation 组件",
-  "sceneGlobalProperties": "全局属性",
-  "sceneLoadingStates": "加载状态",
-  "sceneDevtools": "DevTools 集成",
-
-  "basicTranslationTitle": "基础翻译",
-  "basicTranslationDesc": "验证 t() 函数的基本翻译功能，包括嵌套键名访问、数组索引和默认值fallback。",
-  "hello": "你好，世界！",
-  "nested": {
-    "level1": {
-      "level2": "这是一个嵌套的翻译键"
-    }
-  },
-  "items": ["第一项", "第二项", "第三项"],
-
-  "languageSwitcherTitle": "语言切换",
-  "languageSwitcherDesc": "验证 setLocale() 方法、locale 响应式状态、availableLocales 列表和 isLoading 加载状态。",
-  "languageSelect": "选择语言",
-  "languageSwitching": "切换中...",
-  "languageSwitchSuccess": "语言切换成功！",
-  "languageSwitchError": "语言切换失败，请重试。",
-  "languageChinese": "中文",
-  "languageEnglish": "English",
-
-  "parameterInterpolationTitle": "参数插值",
-  "parameterInterpolationDesc": "验证 t(key, params) 的参数插值功能，支持多种参数类型和特殊字符转义。",
-  "greeting": "你好，{{name}}！",
-  "userInfo": "用户 {{username}} 今年 {{age}} 岁",
-  "numbers": "数量：{{count}}，价格：¥{{price}}",
-  "escapeHtml": "输入内容：{{html}}",
-
-  "pluralizationTitle": "复数支持",
-  "pluralizationDesc": "验证 t(key, { count }) 的自动复数化功能，根据不同语言的复数规则自动选择合适的翻译。",
-  "items_zero": "没有项目",
-  "items_one": "1 个项目",
-  "items_other": "{{count}} 个项目",
-  "itemsWithUser_other": "{{user}} 有 {{count}} 个项目",
-
-  "directiveTitle": "v-t 指令",
-  "directiveDesc": "验证 v-t 指令的各种用法，包括基础用法、参数支持、HTML 模式和响应式更新。",
-  "directiveBasic": "这是通过 v-t 指令渲染的文本",
-  "directiveWithParams": "你好 {{name}}，现在是 {{time}}",
-  "directiveHtml": "<strong>这是粗体</strong>和<em>斜体</em>文本",
-  "directiveMorning": "早上好！",
-  "directiveAfternoon": "下午好！",
-  "directiveEvening": "晚上好！",
-  "directiveReactiveHint": "切换语言时，下方文本会自动更新：",
-
-  "translationComponentTitle": "Translation 组件",
-  "translationComponentDesc": "验证 <Translation> 组件的各种属性和用法，包括 keypath、params、plural、tag 等。",
-  "translationComponentBasic": "这是通过 Translation 组件渲染的",
-  "translationComponentWithParams": "{{name}} 是一位 {{role}}",
-  "translationComponentCustomTag": "自定义 HTML 标签",
-
-  "globalPropertiesTitle": "全局属性",
-  "globalPropertiesDesc": "验证全局属性 $t、$i18n 和 $locale 的使用，这些属性在 Composition API 和 Options API 中都可用。",
-  "globalPropertiesTestKey": "通过 $t() 全局方法翻译",
-  "globalPropertiesOptionsApiMessage": "这是 Options API 组件中的消息",
-
-  "loadingStatesTitle": "加载状态",
-  "loadingStatesDesc": "验证 isReady 和 isLoading 状态，用于条件渲染和禁用 UI。",
-  "loadingStatesReady": "I18n 已就绪",
-  "loadingStatesInitializing": "初始化中...",
-  "loadingStatesSwitching": "正在切换语言...",
-  "loadingStatesNoLoading": "当前没有进行任何加载操作",
-  "loadingStatesSwitchBtn": "切换语言测试",
-
-  "devtoolsTitle": "DevTools 集成",
-  "devtoolsDesc": "验证 DevTools 的统计功能、缺失键追踪和导出功能。",
-  "devtoolsAvailable": "DevTools 可用",
-  "devtoolsNotAvailable": "DevTools 不可用（仅开发环境）",
-  "devtoolsStatsMissing": "缺失键",
-  "devtoolsStatsCacheHits": "缓存命中",
-  "devtoolsStatsCacheMisses": "缓存未命中",
-  "devtoolsStatsHitRate": "命中率",
-  "devtoolsRefresh": "刷新统计",
-  "devtoolsPrintStats": "打印统计",
-  "devtoolsExportJSON": "导出 JSON",
-  "devtoolsGetMissing": "获取缺失键",
-  "devtoolsClearMissing": "清除缺失键",
-  "devtoolsConsoleHint": "在浏览器控制台使用以下命令"
+  "10014274": "加载翻译资源...",
+  "10112715": "已就绪",
+  "10141355": "切换中...",
+  "10210149": "✅ 已就绪",
+  "10521114": "加载状态",
+  "10715510": "购物车有少量商品",
+  "11111031": "演示 t() 函数的基本用法和默认值功能",
+  "11152110": "条件渲染",
+  "11331069": "切换语言",
+  "12101513": "✅ DevTools 已启用",
+  "12313107": "购物车有很多商品",
+  "12473121": "翻译引擎已初始化，可以正常使用",
+  "12813119": "这个key不存在",
+  "12929500": "欢迎使用 TransLink 国际化解决方案",
+  "13041512": "加载中",
+  "13121015": "这是一个嵌套的组件",
+  "13126881": "演示 v-t 指令的使用（如果支持）",
+  "13141528": "打开浏览器控制台查看 DevTools 日志",
+  "13151180": "已启用",
+  "13710251": "所有组件共享同一个翻译引擎实例",
+  "13817031": "即使翻译缺失，应用也不会崩溃",
+  "14141320": "欢迎使用 TransLink",
+  "14151311": "演示 DevTools 和错误处理功能",
+  "14512814": "打开开发工具",
+  "14712581": "这是 Vue3 响应式系统的特性",
+  "15106513": "你好，世界！",
+  "15134811": "这是第一个子组件",
+  "15137952": "返回原始文本作为后备",
+  "15191313": "触发缺失 Key",
+  "15211150": "购物车是空的",
+  "15581091": "演示 isReady 和 isLoading 状态管理",
+  "15965141": "演示 useI18n 的所有返回值",
+  "17415812": "子组件 3（嵌套）",
+  "21133707": "全局属性",
+  "21215085": "快速操作",
+  "21511119": "当前语言",
+  "27615110": "基础翻译",
+  "30131210": "欢迎使用",
+  "33140015": "子组件 2",
+  "37315141": "开发工具",
+  "38391314": "子组件 1",
+  "48311151": "⏳ 加载中",
+  "50310151": "TransLink 国际化解决方案 - Vue 演示",
+  "54680511": "演示场景",
+  "56151433": "演示语言切换功能和状态管理",
+  "57276801": "正在加载语言资源...",
+  "61247155": "组件化使用",
+  "61291467": "演示在多个组件中使用 useI18n",
+  "69141163": "购物车有一些商品",
+  "71353148": "演示根据不同条件渲染不同文本（应用层逻辑）",
+  "71572150": "场景",
+  "74836131": "翻译函数",
+  "76997131": "语言切换",
+  "78162113": "点击按钮观察 isLoading 状态变化",
+  "79513141": "列表项",
+  "80111075": "演示如何在翻译文本中使用动态参数",
+  "81057159": "指令使用",
+  "81112015": "当前时间",
+  "82713018": "真",
+  "83129108": "有内容",
+  "84141454": "语言切换会自动更新所有组件",
+  "91091511": "特殊字符已自动转义",
+  "91312082": "加载中...",
+  "91561514": "语言",
+  "92471411": "始终返回可用的文本（原文或默认值）",
+  "95521311": "当语言切换时，所有使用 t() 的文本会自动更新",
+  "99371436": "简体中文",
+  "04245112": "TransLink Vue Demo",
+  "09401111": "参数插值"
 }
